--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         @font-face {
             font-family: 'Brams';
-            src: url('path/to/Brams-Regular.woff2') format('woff2');
+            src: url('BRAMS.woff2') format('woff2');
             font-weight: normal;
             font-style: normal;
             font-display: swap;
