--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         @font-face {
             font-family: 'Brams';
             src: url('BRAMS.woff2') format('woff2');
+            src: url('BRAMS.woff') format('woff');
             font-weight: normal;
             font-style: normal;
             font-display: swap;
