--- a/index.html
+++ b/index.html
@@ -3,25 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My profile</title>
+    <title>My Profile</title>
     <style>
         @font-face {
             font-family: 'Brams';
-            src: url('BRAMS.woff2') format('woff2');
-            src: url('BRAMS.woff') format('woff');
+            src: url('BRAMS.woff2') format('woff2'),
+                 url('BRAMS.woff') format('woff');
             font-weight: normal;
             font-style: normal;
             font-display: swap;
         }
 
         body {
-            font-family: 'Brams'; 
+            font-family: 'Brams';
             margin: 0;
             padding: 0;
             overflow: hidden; /* Prevent horizontal scroll */
             color: #fff;
             position: relative; /* For layering content over the video */
         }
+
         #loading-screen {
             position: fixed;
             top: 0;
@@ -34,7 +35,8 @@
             align-items: center;
             z-index: 9999;
         }
-        #loading-video {
+
+        #loading-video, #video-background, #main-video {
             position: fixed;
             top: 0;
             left: 0;
@@ -43,46 +45,28 @@
             object-fit: cover; /* Crop and fit the video */
             z-index: -1; /* Ensure the video is in the background */
             pointer-events: none; /* Make the video non-interactive */
-            filter: blur(0px); /* Reduced blur effect */
-            transition: filter 0.5s ease-out; /* Smooth transition for blur effect */
-            display: none; /* Hide loading video initially */
         }
+
+        #loading-video, #main-video {
+            display: none; /* Hide loading video and main video initially */
+        }
+
         #loading-screen h1 {
             font-size: 2em;
             color: #fff;
         }
-        #video-background {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            object-fit: cover; /* Crop and fit the video */
-            z-index: -1; /* Ensure the video is in the background */
-            pointer-events: none; /* Make the video non-interactive */
-            filter: blur(10px); /* Apply blur effect to background */
-            transition: filter 0.5s ease-out; /* Smooth transition for blur effect */
-        }
-        #main-video {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            object-fit: cover; /* Crop and fit the video */
-            z-index: -1; /* Ensure the video is in the background */
-            pointer-events: none; /* Make the video non-interactive */
-            display: none; /* Hide main video initially */
-        }
+
         #main-content {
             display: none; /* Hide the main content initially */
         }
+
         header {
             background-color: rgba(0, 0, 0, 0.7);
             padding: 20px;
             text-align: center;
             animation: glowHeader 2s ease-in-out infinite alternate; /* Add glow animation */
         }
+
         @keyframes glowHeader {
             0% {
                 box-shadow: 0 0 10px rgba(255, 255, 255, 0); /* No glow */
@@ -91,13 +75,15 @@
                 box-shadow: 0 0 20px rgba(255, 255, 255, 0.8); /* Glow effect */
             }
         }
+
         header h1 {
             margin: 0;
-            font-size: 2em; /* Reduced font size for welcome title */
+            font-size: 2em;
             text-transform: uppercase;
             letter-spacing: 2px;
-            color: #fff; /* White text color for header */
+            color: #fff;
         }
+
         .content {
             padding: 20px;
             text-align: center;
@@ -105,74 +91,83 @@
             flex-direction: column;
             align-items: center;
         }
+
         .profile-picture {
-            max-width: 150px; /* Adjust size as needed */
-            margin-bottom: 20px; /* Space between profile picture and text */
-            text-align: left; /* Align profile picture to the left */
+            max-width: 30vw; /* Responsive size */
+            margin-bottom: 20px;
         }
+
         .profile-picture img {
             width: 100%;
-            border-radius: 50%; /* Make it circular */
+            border-radius: 50%;
         }
+
         .intro {
-            max-width: 600px;
+            max-width: 90vw; /* Responsive size */
             padding: 20px;
-            background-color: transparent; /* Remove background color */
-            border-radius: 0; /* Remove border-radius */
-            margin-bottom: 20px; /* Space below the "hello!" text */
-            color: #fff; /* White text color */
+            background-color: transparent;
+            margin-bottom: 20px;
+            color: #fff;
         }
+
         .intro h2 {
-            font-size: 1.5em; /* Reduced font size for intro title */
-            margin-top: 0; /* Remove margin top */
+            font-size: 1.5em;
+            margin-top: 0;
         }
+
         .intro p {
-            font-size: 2em;
+            font-size: 1.2em;
             line-height: 1.6;
         }
+
         .links {
-            text-align: right; /* Right align links */
             margin-top: 20px;
-            position: relative; /* Ensure links are positioned relative to parent */
-            overflow: hidden; /* Hide overflow to prevent initial appearance */
         }
+
         .links a {
             display: inline-block;
-            margin: 10px; /* Adjusted margin for spacing between links */
-            padding: 15px 30px; /* Enlarged padding for links */
-            background: linear-gradient(135deg, #774c96, #59198e); /* Purple gradient from the gradient */
+            margin: 10px;
+            padding: 10px 20px; /* Responsive padding */
+            background: linear-gradient(135deg, #774c96, #59198e);
             color: #fff;
             text-decoration: none;
-            font-size: 2em; /* Enlarged font size for links */
+            font-size: 1em; /* Responsive font size */
             border-radius: 3px;
-            border: 2px solid transparent; /* Normal border style */
-            position: relative; /* Ensure each link is positioned relative to its position */
-            right: -100%; /* Start off-screen to the right */
+            border: 2px solid transparent;
+            position: relative;
+            right: -100%;
             opacity: 0;
-            animation: slideIn 0.5s forwards; /* Apply animation */
+            animation: slideIn 0.5s forwards;
         }
+
         .links a:nth-child(1) {
-            animation-delay: 1.1s; /* Delay for first link */
+            animation-delay: 1.1s;
         }
+
         .links a:nth-child(2) {
-            animation-delay: 1.2s; /* Delay for second link */
+            animation-delay: 1.2s;
         }
+
         .links a:nth-child(3) {
-            animation-delay: 1.3s; /* Delay for third link */
+            animation-delay: 1.3s;
         }
+
         .links a:nth-child(4) {
-            animation-delay: 1.4s; /* Delay for fourth link */
+            animation-delay: 1.4s;
         }
+
         .links a:nth-child(5) {
-            animation-delay: 1.5s; /* Delay for fifth link */
+            animation-delay: 1.5s;
         }
+
         .links a:hover {
-            background: linear-gradient(135deg, #59198e, #774c96); /* Dark purple gradient on hover */
-            border-color: #fff; /* White border color on hover */
-            color: #fff; /* White text color on hover */
-            text-shadow: 0 0 10px rgba(255, 255, 255, 0.8); /* Glow effect for text on hover */
-            box-shadow: 0 0 10px rgba(255, 255, 255, 0.8); /* Glow effect around link on hover */
+            background: linear-gradient(135deg, #59198e, #774c96);
+            border-color: #fff;
+            color: #fff;
+            text-shadow: 0 0 10px rgba(255, 255, 255, 0.8);
+            box-shadow: 0 0 10px rgba(255, 255, 255, 0.8);
         }
+
         footer {
             background-color: rgba(0, 0, 0, 0.7);
             padding: 10px;
@@ -182,6 +177,7 @@
             width: 100%;
             animation: glowFooter 2s ease-in-out infinite alternate; /* Add glow animation */
         }
+
         @keyframes glowFooter {
             0% {
                 box-shadow: 0 0 10px rgba(255, 255, 255, 0); /* No glow */
@@ -190,13 +186,16 @@
                 box-shadow: 0 0 20px rgba(255, 255, 255, 0.8); /* Glow effect */
             }
         }
+
         footer p {
             margin: 0;
         }
+
         .valorant-logo {
             width: 100px;
             margin-top: 20px;
         }
+
         @keyframes slideIn {
             0% {
                 right: -100%; /* Start off-screen to the right */
@@ -205,6 +204,26 @@
             100% {
                 right: 0; /* Slide in to the right */
                 opacity: 1;
+            }
+        }
+
+        @media (min-width: 768px) {
+            /* Larger devices adjustments */
+            header h1, .intro p, .links a {
+                font-size: 2em;
+            }
+
+            .profile-picture {
+                max-width: 150px;
+            }
+
+            .intro {
+                max-width: 600px;
+            }
+
+            .links a {
+                font-size: 1.5em;
+                padding: 15px 30px;
             }
         }
     </style>
@@ -285,6 +304,7 @@
     </script>
 </body>
 </html>
+
 
 
 
