--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
         header h1 {
             margin: 0;
-            font-size: 2em;
+            font-size: 3em;
             text-transform: uppercase;
             letter-spacing: 2px;
             color: #fff;
@@ -243,15 +243,15 @@
     </video>
     <div id="main-content">
         <header>
-            <h1>ngleeqthai</h1>
+            <h1>Welcome to My World</h1>
         </header>
         <div class="content">
             <div class="profile-picture">
                 <img src="4C7F5981-86C2-416D-9742-0EECAC5626B1 (1).jpeg" alt="Profile Picture">
             </div>            
             <div class="intro">
-                <h2>hello!</h2>
-                <p>manh beo mup rup.</p>
+                <h2>ngleeqthai!</h2>
+                <p>em manh mup rup.</p>
             </div>
             <div class="links">
                 <a href="https://www.facebook.com/ngleeqthai/" target="_blank">Facebook</a>
