--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
         header h1 {
             margin: 0;
-            font-size: 3em;
+            font-size: 2em;
             text-transform: uppercase;
             letter-spacing: 2px;
             color: #fff;
@@ -111,12 +111,12 @@
         }
 
         .intro h2 {
-            font-size: 3em;
+            font-size: 1.5em;
             margin-top: 0;
         }
 
         .intro p {
-            font-size: 2em;
+            font-size: 1.2em;
             line-height: 1.6;
         }
 
@@ -126,14 +126,14 @@
 
         .links a {
             display: inline-block;
-            margin: 20px;
-            padding: 15px 25px; /* Responsive padding */
+            margin: 10px;
+            padding: 10px 20px; /* Responsive padding */
             background: linear-gradient(135deg, #774c96, #59198e);
             color: #fff;
             text-decoration: none;
-            font-size: 2em; /* Responsive font size */
+            font-size: 1em; /* Responsive font size */
             border-radius: 3px;
-            border: 3px solid transparent;
+            border: 2px solid transparent;
             position: relative;
             right: -100%;
             opacity: 0;
@@ -210,7 +210,7 @@
         @media (min-width: 768px) {
             /* Larger devices adjustments */
             header h1, .intro p, .links a {
-                font-size: 5em;
+                font-size: 2em;
             }
 
             .profile-picture {
@@ -230,28 +230,28 @@
 </head>
 <body>
     <div id="loading-screen">
-        <video id="loading-video" autoplay muted loop>
+        <video id="loading-video" autoplay muted loop controls="false">
             <source src="Untitled video - Made with Clipchamp.mp4" type="video/mp4">
         </video>
         <h1>Loading<span id="ellipsis"></span></h1>
     </div>
-    <video id="video-background" autoplay muted loop>
+    <video id="video-background" autoplay muted loop controls="false">
         <source src="y2mate.com - Clove LIVE wallpaper 4K  Valorant Episode 8  Act 2  Homescreen_1080p.mp4" type="video/mp4">
     </video>
-    <video id="main-video" autoplay muted loop>
+    <video id="main-video" autoplay muted loop controls="false">
         <source src="y2mate.com - Clove LIVE wallpaper 4K  Valorant Episode 8  Act 2  Homescreen_1080p.mp4" type="video/mp4">
     </video>
     <div id="main-content">
         <header>
-            <h1>Welcome to My World</h1>
+            <h1>ngleeqthai</h1>
         </header>
         <div class="content">
             <div class="profile-picture">
-                <img src="4C7F5981-86C2-416D-9742-0EECAC5626B1 (1).jpeg" alt="Profile Picture">
+                <img src="4C7F5981-86C2-416D-9742-0EECAC5626B1.jpeg" alt="Profile Picture">
             </div>            
             <div class="intro">
-                <h2>ngleeqthai!</h2>
-                <p>em manh mup rup.</p>
+                <h2>hello!</h2>
+                <p>manh beo mup rup.</p>
             </div>
             <div class="links">
                 <a href="https://www.facebook.com/ngleeqthai/" target="_blank">Facebook</a>
