--- a/index.html
+++ b/index.html
@@ -111,12 +111,12 @@
         }
 
         .intro h2 {
-            font-size: 1.5em;
+            font-size: 3em;
             margin-top: 0;
         }
 
         .intro p {
-            font-size: 1.2em;
+            font-size: 2.5em;
             line-height: 1.6;
         }
 
@@ -127,11 +127,11 @@
         .links a {
             display: inline-block;
             margin: 10px;
-            padding: 10px 20px; /* Responsive padding */
+            padding: 20px 30px; /* Responsive padding */
             background: linear-gradient(135deg, #774c96, #59198e);
             color: #fff;
             text-decoration: none;
-            font-size: 1em; /* Responsive font size */
+            font-size: 2em; /* Responsive font size */
             border-radius: 3px;
             border: 2px solid transparent;
             position: relative;
@@ -210,7 +210,7 @@
         @media (min-width: 768px) {
             /* Larger devices adjustments */
             header h1, .intro p, .links a {
-                font-size: 2em;
+                font-size: 4em;
             }
 
             .profile-picture {
@@ -247,10 +247,10 @@
         </header>
         <div class="content">
             <div class="profile-picture">
-                <img src="4C7F5981-86C2-416D-9742-0EECAC5626B1.jpeg" alt="Profile Picture">
+                <img src="4C7F5981-86C2-416D-9742-0EECAC5626B1 (1).jpeg" alt="Profile Picture">
             </div>            
             <div class="intro">
-                <h2>hello!</h2>
+                <h2>Welcome to my world !</h2>
                 <p>manh beo mup rup.</p>
             </div>
             <div class="links">
