--- a/index.html
+++ b/index.html
@@ -102,11 +102,13 @@
         .profile-picture {
             max-width: 30vw; /* Responsive size */
             margin-bottom: 20px;
+            border-radius: 50%; /* Circular shape */
+            overflow: hidden; /* Ensure image does not overflow */
         }
 
         .profile-picture img {
             width: 100%;
-            border-radius: 50%;
+            border-radius: 50%; /* Circular shape */
         }
 
         .intro {
@@ -311,7 +313,6 @@
     </script>
 </body>
 </html>
-
 
 
 
