--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
 
         @keyframes glowHeader {
             0% {
-                box-shadow: 0 0 10px rgba(255, 0, 255, 0); /* No glow */
+                box-shadow: 0 0 10px rgba(255, 255, 255, 0); /* No glow */
             }
             100% {
-                box-shadow: 0 0 20px rgba(255, 0, 255, 0.8); /* Glow effect */
+                box-shadow: 0 0 20px rgba(255, 255, 255, 0.8); /* Glow effect */
             }
         }
 
@@ -101,8 +101,7 @@
             margin-bottom: 20px;
             overflow: hidden;
             border-radius: 50%; /* Circular shape */
-            box-shadow: 0 0 15px rgba(255, 0, 255, 0.8); /* Pink/purple glow effect */
-            border: 3px solid #fff; /* White border */
+            box-shadow: 0 0 15px rgba(255, 255, 255, 0.8); /* Glow effect */
         }
 
         .profile-picture img {
@@ -189,10 +188,10 @@
 
         @keyframes glowFooter {
             0% {
-                box-shadow: 0 0 10px rgba(255, 0, 255, 0); /* No glow */
+                box-shadow: 0 0 10px rgba(255, 255, 255, 0); /* No glow */
             }
             100% {
-                box-shadow: 0 0 20px rgba(255, 0, 255, 0.8); /* Glow effect */
+                box-shadow: 0 0 20px rgba(255, 255, 255, 0.8); /* Glow effect */
             }
         }
 
@@ -267,7 +266,7 @@
                 <a href="https://www.facebook.com/ngleeqthai/" target="_blank">Facebook</a>
                 <a href="https://www.instagram.com/_ngleeq.thai/?hl=en" target="_blank">Instagram</a>
                 <a href="https://steamcommunity.com/id/ngleeqthai0212/" target="_blank">Steam</a>
-                <a href="https://specs.gg/ngleeq.thai" target="_blank">My Settings</a>
+                <a href="https://specs.gg/ngleeq.thai" target="_blank">Setting</a>
                 <a href="https://tracker.gg/valorant/profile/riot/WWWWWWWWWWWWWWW%231234/overview" target="_blank">Tracker</a>
             </div>
         </div>
@@ -286,6 +285,7 @@
     </script>
 </body>
 </html>
+
 
 
 
