--- a/index.html
+++ b/index.html
@@ -36,16 +36,21 @@
             justify-content: center;
             align-items: center;
             z-index: 9999;
-            animation: glowLoading 2s ease-in-out infinite alternate; /* Add glow animation */
         }
 
-        @keyframes glowLoading {
-            0% {
-                box-shadow: 0 0 10px rgba(255, 255, 255, 0); /* No glow */
-            }
-            100% {
-                box-shadow: 0 0 20px rgba(255, 255, 255, 0.8); /* Glow effect */
-            }
+        #loading-video, #video-background, #main-video {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: cover; /* Crop and fit the video */
+            z-index: -1; /* Ensure the video is in the background */
+            pointer-events: none; /* Make the video non-interactive */
+        }
+
+        #loading-video, #main-video {
+            display: none; /* Hide loading video and main video initially */
         }
 
         #loading-screen h1 {
@@ -55,7 +60,6 @@
 
         #main-content {
             display: none; /* Hide the main content initially */
-            padding-top: 80px; /* Add padding to avoid overlap with fixed header */
         }
 
         header {
@@ -92,6 +96,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
+            margin-top: 80px; /* Add margin to avoid content being hidden behind the fixed header */
         }
 
         .profile-picture {
@@ -242,7 +247,7 @@
         <video id="loading-video" autoplay muted loop>
             <source src="Untitled video - Made with Clipchamp.mp4" type="video/mp4">
         </video>
-        <h1>Loading<span id="ellipsis">...</span></h1>
+        <h1>Loading<span id="ellipsis"></span></h1>
     </div>
     <video id="video-background" autoplay muted loop>
         <source src="y2mate.com - Clove LIVE wallpaper 4K  Valorant Episode 8  Act 2  Homescreen_1080p.mp4" type="video/mp4">
