--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             z-index: 9999;
         }
 
-        #loading-video {
+        #loading-video, #video-background, #main-video {
             position: fixed;
             top: 0;
             left: 0;
@@ -49,31 +49,17 @@
             pointer-events: none; /* Make the video non-interactive */
         }
 
+        #loading-video, #main-video {
+            display: none; /* Hide loading video and main video initially */
+        }
+
         #loading-screen h1 {
             font-size: 5em;
             color: #fff;
-            animation: glowLoading 2s ease-in-out infinite alternate; /* Add glow animation */
-            position: relative; /* Ensure position is set for animation */
-        }
-
-        #ellipsis {
-            position: absolute; /* Ensure position for the ellipsis */
-            right: 0;
-            top: 0;
-        }
-
-        @keyframes glowLoading {
-            0% {
-                text-shadow: 0 0 10px rgba(255, 255, 255, 0); /* No glow */
-            }
-            100% {
-                text-shadow: 0 0 20px rgba(255, 255, 255, 0.8); /* Glow effect */
-            }
         }
 
         #main-content {
             display: none; /* Hide the main content initially */
-            padding-top: 80px; /* Add padding to avoid overlap with fixed header */
         }
 
         header {
@@ -110,23 +96,31 @@
             display: flex;
             flex-direction: column;
             align-items: center;
+            margin-top: 80px; /* Add margin to avoid content being hidden behind the fixed header */
         }
 
         .profile-picture {
             position: relative;
-            width: 150px; /* Fixed size */
-            height: 150px; /* Fixed size */
+            max-width: 30vw; /* Responsive size */
             margin-bottom: 20px;
-            overflow: hidden;
-            border-radius: 50%; /* Circular shape */
-            box-shadow: 0 0 15px rgba(255, 255, 255, 0.8); /* Glow effect */
-            border: 3px solid #fff; /* White border */
         }
 
         .profile-picture img {
             width: 100%;
-            height: 100%;
-            object-fit: cover;
+            border-radius: 50%;
+            box-shadow: 0 0 15px rgba(255, 255, 255, 0.8); /* Glow effect */
+        }
+
+        .profile-picture::after {
+            content: '';
+            position: absolute;
+            top: -10px;
+            left: -10px;
+            right: -10px;
+            bottom: -10px;
+            border: 3px solid rgba(255, 255, 255, 0.5); /* Border with transparency */
+            border-radius: 50%; /* Circle shape */
+            box-shadow: 0 0 15px rgba(255, 255, 255, 0.5); /* Glow effect */
         }
 
         .intro {
@@ -143,7 +137,7 @@
         }
 
         .intro p {
-            font-size: 3em; /* Title size */
+            font-size: 3em; /*Title size*/
             line-height: 1.6;
         }
 
@@ -241,8 +235,7 @@
             }
 
             .profile-picture {
-                width: 200px; /* Larger size */
-                height: 200px; /* Larger size */
+                max-width: 150px;
             }
 
             .intro {
@@ -261,7 +254,7 @@
         <video id="loading-video" autoplay muted loop>
             <source src="Untitled video - Made with Clipchamp.mp4" type="video/mp4">
         </video>
-        <h1>Loading<span id="ellipsis">...</span></h1>
+        <h1>Loading<span id="ellipsis"></span></h1>
     </div>
     <video id="video-background" autoplay muted loop>
         <source src="y2mate.com - Clove LIVE wallpaper 4K  Valorant Episode 8  Act 2  Homescreen_1080p.mp4" type="video/mp4">
@@ -282,29 +275,7 @@
                 <p>manh beo mup rup.</p>
             </div>
             <div class="links">
-                <a href="https://www.facebook.com/ngleeqthai/" target="_blank">Facebook</a>
-                <a href="https://www.instagram.com/_ngleeq.thai/?hl=en" target="_blank">Instagram</a>
-                <a href="https://steamcommunity.com/id/ngleeqthai0212/" target="_blank">Steam</a>
-                <a href="https://specs.gg/ngleeq.thai" target="_blank">My Settings</a>
-                <a href="https://tracker.gg/valorant/profile/riot/WWWWWWWWWWWWWWW%231234/overview" target="_blank">Tracker</a>
-            </div>
-        </div>
-    </div>
-    <footer>
-        <p>Follow me on social media</p>
-        <img src="Valorant_Full_Logo.svg.png" alt="Valorant Logo" class="valorant-logo">
-    </footer>
-    <script>
-        // Simulate loading process
-        setTimeout(function() {
-            document.getElementById('loading-screen').style.display = 'none';
-            document.getElementById('main-content').style.display = 'block';
-            document.getElementById('main-video').style.display = 'block';
-            document.getElementById('loading-video').style.display = 'none'; // Hide loading video after content is loaded
-        }, 5000); // Adjust the timeout as needed
-    </script>
-</body>
-</html>
+                <a href="https://www.facebook.com/ngleeqthai/" target="_blank">Facebook
 
 
 
