--- a/index.html
+++ b/index.html
@@ -100,19 +100,15 @@
         }
 
         .profile-picture {
-            position: relative;
-            width: 150px; /* Fixed size */
-            height: 150px; /* Fixed size */
+            max-width: 30vw; /* Responsive size */
             margin-bottom: 20px;
-            overflow: hidden;
             border-radius: 50%; /* Circular shape */
-            box-shadow: 0 0 15px rgba(255, 255, 255, 0.8); /* Glow effect */
+            overflow: hidden; /* Ensure image does not overflow */
         }
 
         .profile-picture img {
             width: 100%;
-            height: 100%;
-            object-fit: cover;
+            border-radius: 50%; /* Circular shape */
         }
 
         .intro {
@@ -129,7 +125,7 @@
         }
 
         .intro p {
-            font-size: 3em; /* Title size */
+            font-size: 3em; /*Title size*/
             line-height: 1.6;
         }
 
@@ -227,8 +223,7 @@
             }
 
             .profile-picture {
-                width: 200px; /* Larger size */
-                height: 200px; /* Larger size */
+                max-width: 150px;
             }
 
             .intro {
@@ -271,28 +266,53 @@
                 <a href="https://www.facebook.com/ngleeqthai/" target="_blank">Facebook</a>
                 <a href="https://www.instagram.com/_ngleeq.thai/?hl=en" target="_blank">Instagram</a>
                 <a href="https://steamcommunity.com/id/ngleeqthai0212/" target="_blank">Steam</a>
-                <a href="https://specs.gg/ngleeq.thai" target="_blank">Setting</a>
-                <a href="https://tracker.gg/valorant/profile/riot/WWWWWWWWWWWWWWW%231234/overview" target="_blank">Tracker</a>
+                <a href="https://specs.gg/ngleeq.thai" target="_blank">My Settings</a>
+                <a href="https://tracker.gg/valorant/profile/riot/WWWWWWWWWWWWWWW%231234/overview" target="_blank">Valorant Tracker</a>
             </div>
         </div>
+        <footer>
+            <p>&copy; WWWWWWWWWWWWWWW</p>
+        </footer>
     </div>
-    <footer>
-        <p>Follow me on social media</p>
-        <img src="Valorant_Full_Logo.svg.png" alt="Valorant Logo" class="valorant-logo">
-    </footer>
+
     <script>
-        // Simulate loading process
-        setTimeout(function() {
-            document.getElementById('loading-screen').style.display = 'none';
-            document.getElementById('main-content').style.display = 'block';
-            document.getElementById('main-video').style.display = 'block';
-        }, 5000); // Adjust the timeout as needed
+        document.addEventListener("DOMContentLoaded", function() {
+            // Show and start loading video from the 3rd second instantly
+            const loadingVideo = document.getElementById("loading-video");
+            loadingVideo.currentTime = 3; // Start from the 3rd second
+            loadingVideo.style.display = "block"; // Show loading video
+            loadingVideo.play(); // Start playing loading video
+
+            // Hide the loading screen and show the video background and main content after 6 seconds
+            setTimeout(function() {
+                document.getElementById("loading-screen").style.display = "none";
+                document.getElementById("loading-video").style.display = "none"; // Hide loading video
+                document.getElementById("video-background").style.filter = "none"; // Remove blur effect
+                document.getElementById("main-video").style.display = "block"; // Display main video
+                document.getElementById("main-video").play(); // Play main video
+                document.getElementById("main-content").style.display = "block";
+            }, 6000); // 6000 milliseconds = 6 seconds
+
+            // Ellipsis animation (now faster, every 166 milliseconds)
+            const ellipsis = document.getElementById('ellipsis');
+            let count = 0;
+            setInterval(() => {
+                count++;
+                if (count === 1) {
+                    ellipsis.textContent = '';
+                } else if (count === 2) {
+                    ellipsis.textContent = '.';
+                } else if (count === 3) {
+                    ellipsis.textContent = '..';
+                } else if (count === 4) {
+                    ellipsis.textContent = '...';
+                    count = 0;
+                }
+            }, 166); // Change every 0.166 seconds (166 milliseconds)
+        });
     </script>
 </body>
 </html>
-
-
-
 
 
 
