--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
 
         @keyframes glowHeader {
             0% {
-                box-shadow: 0 0 10px rgba(255, 255, 255, 0); /* No glow */
+                box-shadow: 0 0 10px rgba(204, 94, 255, 0); /* No glow (pink/purple glow) */
             }
             100% {
-                box-shadow: 0 0 20px rgba(255, 255, 255, 0.8); /* Glow effect */
+                box-shadow: 0 0 20px rgba(204, 94, 255, 0.8); /* Glow effect (pink/purple glow) */
             }
         }
 
@@ -105,7 +105,8 @@
             border-radius: 50%; /* Circular shape */
             overflow: hidden; /* Ensure image does not overflow */
             position: relative; /* Position relative for absolute border */
-            box-shadow: 0 0 20px rgba(255, 255, 255, 0.8); /* Glow effect */
+            box-shadow: 0 0 20px rgba(204, 94, 255, 0.8); /* Glow effect (pink/purple glow) */
+            border: 2px solid rgba(204, 94, 255, 0.8); /* Pink/purple border */
         }
 
         .profile-picture img {
@@ -191,10 +192,10 @@
 
         @keyframes glowFooter {
             0% {
-                box-shadow: 0 0 10px rgba(255, 255, 255, 0); /* No glow */
+                box-shadow: 0 0 10px rgba(204, 94, 255, 0); /* No glow (pink/purple glow) */
             }
             100% {
-                box-shadow: 0 0 20px rgba(255, 255, 255, 0.8); /* Glow effect */
+                box-shadow: 0 0 20px rgba(204, 94, 255, 0.8); /* Glow effect (pink/purple glow) */
             }
         }
 
