--- a/index.html
+++ b/index.html
@@ -107,6 +107,9 @@
             position: relative; /* Position relative for absolute border */
             box-shadow: 0 0 20px rgba(204, 94, 255, 0.8); /* Glow effect (pink/purple glow) */
             border: 2px solid rgba(204, 94, 255, 0.8); /* Pink/purple border */
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
 
         .profile-picture img {
