--- a/index.html
+++ b/index.html
@@ -239,6 +239,18 @@
             .links a {
                 font-size: 2em;
                 padding: 15px 30px;
+        @media (max-width: 767px) {
+    /* Smaller devices adjustments */
+    .links {
+        margin-top: 10px; /* Reduce margin top for links */
+    }
+
+    .links a {
+        font-size: 1.5em; /* Decrease font size */
+        padding: 10px 20px; /* Adjust padding */
+    }
+}
+
             }
         }
     </style>
