--- a/index.html
+++ b/index.html
@@ -97,6 +97,9 @@
             flex-direction: column;
             align-items: center;
             margin-top: 80px; /* Add margin to avoid content being hidden behind the fixed header */
+            max-width: 800px; /* Limit max width for larger screens */
+            margin-left: auto;
+            margin-right: auto;
         }
 
         .profile-picture {
