--- a/index.html
+++ b/index.html
@@ -97,10 +97,10 @@
             flex-direction: column;
             align-items: center;
             margin-top: 80px; /* Add margin to avoid content being hidden behind the fixed header */
-            width: 90%; /* Limit content width */
-            max-width: 1200px; /* Maximum content width */
+            max-width: 1000px; /* Limit content width */
             margin-left: auto;
             margin-right: auto;
+            width: 90%; /* Adjust width as needed */
         }
 
         .profile-picture {
@@ -336,6 +336,7 @@
     </script>
 </body>
 </html>
+
 
 
 
