--- a/index.html
+++ b/index.html
@@ -231,6 +231,22 @@
             .content {
                 width: 90%;
                 max-width: 1000px;
+                
+            .profile-picture {
+                max-width: 20vw; /* Increase profile picture size on smaller screens */
+            }
+
+            .intro p {
+                font-size: 2em; /* Decrease font size */
+            }
+
+            .links {
+                margin-top: 5px; /* Reduce margin top for links */
+            }
+
+            .links a {
+                font-size: 2em; /* Decrease font size */
+                padding: 10px 20px; /* Adjust padding */
             }
         }
 
